--- a/Projeto_de_PLN.ipynb
+++ b/Projeto_de_PLN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8kH/MWnqh50ZbTHtEwWzb",
+      "authorship_tag": "ABX9TyPm4UnO898Yr7yWxREGHGZ0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,6 +213,21 @@
       ],
       "metadata": {
         "id": "KakRWlHBz-Uk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mkdir data\n",
+        "!touch data/blog-post.md\n",
+        "!touch data/linkedin-post.md\n",
+        "!touch data/twitter-post.md\n",
+        "!touch data/reels-script.md"
+      ],
+      "metadata": {
+        "id": "5EAMTQ0NItE5"
       },
       "execution_count": null,
       "outputs": []
